force-app/main/default/objects/Config__mdt/fields/APIKey__c.field-meta.xml
<CustomField>
    <fullName>APIKey__c</fullName>
    <description>An API key used for communicating with the Friendly Captcha API. Created in the Friendly Captcha dashboard.</description>
    <label>APIKey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>