force-app/main/default/objects/Config__mdt/fields/Language__c.field-meta.xml
<CustomField>
	<fullName>Language__c</fullName>
	<description>Language code such as "en" for English or "de" for German. Defaults to automatic language detection. Usually you should not set this yourself and instead let the widget detect the language automatically.</description>
	<label>Language</label>
	<length>100</length>
	<type>Text</type>
</CustomField>