force-app/main/default/objects/Config__mdt/fields/StartMode__c.field-meta.xml
<CustomField>
	<fullName>StartMode__c</fullName>
	<description>The start mode determines the behavior around automatic activation of the widget. Activation here means the challenge gets requested and gets solved.</description>
	<label>StartMode</label>
	<type>Picklist</type>
	<defaultValue>&quot;focus&quot;</defaultValue>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>auto</fullName>
				<label>Auto</label>
				<description>The widget gets activated as soon as it is created.</description>
			</value>
			<value>
				<fullName>focus</fullName>
				<default>true</default>
				<label>Focus</label>
				<description>The widget gets activated as soon as the form above it is focused.</description>
			</value>
			<value>
				<fullName>none</fullName>
				<label>None</label>
				<description>The widget does not start automatically at all; the user needs to press the widget.</description>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>