force-app/main/default/objects/Config__mdt/fields/Strict__c.field-meta.xml
<CustomField>
    <fullName>Strict__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines the failure mode behavior of the captcha response verification (siteverify) result. This mode only applies when the API was not able to verify the response, which might occur for network connectivity reasons or a misconfiguration of the client. When &apos;strict&apos; is enabled, unverified responses will be set to &apos;reject&apos;, in a fail-closed behavior. When disabled (the default), unverified responses will be set to &apos;accept&apos;, in a fail-open behavior.</description>
    <label>Strict</label>
    <type>Checkbox</type>
</CustomField>