force-app/main/default/objects/Config__mdt/fields/Theme__c.field-meta.xml
<CustomField>
	<fullName>Theme__c</fullName>
	<description>The theme for the widget.</description>
	<label>Theme</label>
	<type>Picklist</type>
	<defaultValue>&quot;light&quot;</defaultValue>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>light</fullName>
				<default>true</default>
				<label>Light</label>
				<description>A light theme with a white background.</description>
			</value>
			<value>
				<fullName>dark</fullName>
				<label>Dark</label>
				<description>A dark theme with a dark background.</description>
			</value>
			<value>
				<fullName>auto</fullName>
				<label>Auto</label>
				<description>The theme is automatically chosen based on the user's system preferences.</description>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>