force-app/main/default/objects/Config__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>20000</defaultValue>
    <description>How long (in milliseconds) to wait for a captcha response verification request to complete.</description>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>